# api_example

./: Cargo.toml  README.md  Rocket.toml  cert.pem  key.pem  my_unencrypted_key.pem  test.db
src/: apiv1.rs  appconfig.rs  main.rs
