[package]
name = "api_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
sqlite = "0.27.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
serde = "1.0.145"

[profile.release]
strip = true     #strip symbols from binary
lto = true       #enable link time operation
opt-level = "s"  #optimize for size 